# seersdk-rs

./: .dockerignore  Cargo.toml  README.md  WAYPOINT_MANAGEMENT.md  test_waypoints.sh
.github/: DOCKER_CI.md  DOCKER_QUICKREF.md  SETUP_GUIDE.md
.github/workflows/: ci.yml  docker.yml  publish.yml
docker/: QUICKREF.md  README.md  build.sh  docker-compose.ghcr.yml  docker-compose.yml  mocked-robot.Dockerfile  run.sh
examples/: battery_query.rs  demo.rs  mock_robot_server.rs  test_mock_server.rs  tui_client.rs
seersdk-macro/: Cargo.toml
seersdk/src/: api.rs  lib.rs  port_client.rs  protocol.rs
seersdk/src/api/: mod.rs  response.rs
seersdk/src/response/: mod.rs
src/: api.rs  client.rs  error.rs  frame.rs  lib.rs  port_client.rs  protocol.rs  response.rs
src/api/: mod.rs  request.rs  response.rs
tests/: integration_tests.rs  test_fixtures.rs
