[package]
name = "seersdk-rs"
version = "1.0.0"
edition = "2024"
authors = ["Seer Robotics"]
description = "Rust SDK for RBK robot TCP communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paval-shlyk/seersdk-rs"
keywords = ["robotics", "tcp", "client", "rbk", "robokit", "seer"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.7.5"

[dev-dependencies]
serde_json = "1.0"

# Dependencies for examples
ratatui = "0.29"
crossterm = "0.28"
