[package]
name = "seersdk-rs"
version = "1.0.0"
edition = "2024"
authors = ["Paval Shlyk"]
description = "Rust SDK for RBK robot TCP communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paval-shlyk/seersdk-rs"
keywords = ["rbk", "robokit", "seer", "seer-sdk"]
categories = ["network-programming", "simulation"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.7.5"

[dev-dependencies]
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }

# Dependencies for examples
ratatui = "0.29"
crossterm = "0.28"
ctor = "0.6.3"
